# C_homeworks

./: .gitignore  README.md  compile.txt  Презентация_web_server.pptx
HW01/: main  main.c
HW02/: main  main.c  tempCodeRunnerFile.c
HW02/text/: utf-8.txt
HW03/: hashtable.c  hashtable.h  main  main.c  text.txt
HW04/: Makefile  main  main.c
HW05/: main  main.asm  main.c
HW06/: conf-command.txt  curl-static-build
HW07/: clib-package.patch
HW07/clib_patched/src/common/: clib-package.c
HW08/: CMakeLists.txt  listdr  main.c
HW08_SAVE/: 1.c  CMakeCache.txt  Makefile  cmake_install.cmake  example0.c  example1.c  example2.c  exampleapp.c  exampleapp.h  exampleappwin.h  listdir  listdir.c  main2.c  main3.c  treetest.c  treetest2.c  treetest3.c
HW09/: log.c  log.h  main  main.c
HW10/: daemon  daemon.c  daemon.conf
HW10_more/: daemon copy.c  daemon2.c  daemon3.c  deamon  deamon.c  proces  process  process.c  server  test.c  uds.c
HW11/: main  main.c
HW12/: hashtable.c  hashtable.h  main  main.c
HW13/: main  main.c  server_main-317332-3c7cd9.c  winsock_main-317332-029c84.c
HW14/: http_server.c  main
HW15/: db.sqlite  main  main.c
HW16/: glad.c  main  main.c  main2.c  opengl13-cube-noindex.c
HW16/glad/: glad.h
https-wolfssl/: https_server.c  main  servercerts.h  unp.h  wrapunix.c
https-wolfssl/certs/: ca.crt  server.crt  server.key
test/: 1.txt  2.txt  3.txt  hw08
test/22/: 2-2.txt
